# basler-vision-software

./: .gitignore  README.md  debug.py  pyproject.toml  requirements.txt
configs/: acA4024-29uc_23439562.pfs  default_parameters.json
core/: __init__.py  buffer.py  controller.py  engine.py  logging_utils.py  paths.py  process.py  publisher.py  subscribers.py
hardware/: __init__.py  base.py  basler.py
output/: __init__.py  metadata.py  writer.py
src/basler_vision/: __init__.py  cli.py  resources.py  runtime_hygiene.py
src/basler_vision.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/basler_vision/core/: __init__.py  config.py  controller.py  engine.py  logging_utils.py  process.py  publisher.py  subscribers.py
src/basler_vision/hardware/: __init__.py  base.py  basler.py  frame_metadata.py
src/basler_vision/output/: __init__.py  metadata.py  writer.py
tests/: test_basler_camera_settings.py  test_controller_chunk_data.py  test_frame_metadata.py  test_runtime_hygiene.py
